test-data/negative/missing_with_semicolon.aadl
-- ERROR: Missing semicolon after with clause
package missing_with_semicolon
public
    with SomePackage
    system s
    end s;
end missing_with_semicolon;
